# eip712

./: Cargo.toml  README.md
.github/workflows/: test.yaml
eip712-cli/: Cargo.toml
eip712-cli/src/: main.rs
src/: abi.rs  encode.rs  lib.rs  wasm.rs
tests/: abi.rs  generate.rs
tests/abi/: arraystruct.json  eip712demo.json  foo.json  level1.json  level2.json  simple.json
