[package]
name = "eip712"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backtraces = [ "snafu/backtraces" ]
std = [ "serde/std", "snafu/std", "serde_json/std" ]

[dependencies]
serde = { version = "1.0.130", default-features = false, features = [ "derive", "alloc" ] }
serde_json = { version = "1.0.79", default-features = false, features = [ "alloc" ] }
snafu = { version = "0.7.0", default-features = false }
smallvec = { version = "1.7.0", features = [ "union", "const_new" ] }
heck = "0.4.0"
hex = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.56"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dummy"
required-features = [ "std" ]
